07.AI-Operations/exercise-lightspeed/lightspeed-route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: lightspeed-mcp
  namespace: openshift-lightspeed
spec:
  to:
    kind: Service
    name: openshift-mcp-server
    weight: 100
  port:
    targetPort: https
  tls:
    termination: passthrough
  wildcardPolicy: None
